# tarangam

./: .gitignore  Cargo.toml  README.md  test.txt  ui.glade  ui.glade~
src/: config.rs  graph.rs  lib.rs  main.rs  port_util.rs  util.rs
tests/: plottest.rs  serial_port_test.rs
ui/: main_window.glade  main_window.glade~
