[package]
name = "tarangam"
version = "0.2.0"
authors = ["PiyushXCoder <piyush.raj.kit@gmail.com>"]
license = "GPL 3.0"
edition = "2018"
documentation = "A simple serial plotter. एक सरल सीरीय्ल पलौटर।"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/Tarangam"
keywords = ["plotter","serial","serialplotter","arduino","gtk"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
gtk = "0.9.2"
gdk = "0.13.2"
gio = "0.9.1"
glib = "0.10.3"
png = "0.16.8"
cairo-rs = { version = "0.9.1", features = ["png"] }
rand = "0.8.1"
libmath = "0.2.1"
serialport = "4.0.1"
